# muglib

./: .gitignore  CMakeLists.txt
src/: main.c
src/core/: constants.h  graphics.c  graphics.h  input.c  input.h  keys.c  keys.h  system.c  system.h  types.h
src/graphics/: drawing.c  drawing.h
src/input/: ime.h
src/logging/: logger.c  logger.h
src/logging/adapters/: base.h  stdout.h
src/platform/: defines.h
src/platform/3ds/: inputmap.h
src/platform/psvita/: inputmap.h
src/platform/psvita/console/: debugScreen.c  debugScreen.h
src/platform/sdl2/: inputmap.h
src/tui/: label.h  lineedit.h  msgline.h  table.h  tablerow.h
src/utils/: array.c  array.h  color.c  color.h  linked_list.c  linked_list.h  list.c  list.h  maths.c  maths.h  memory.h  random.c  random.h  strings.c  strings.h  time.c  time.h
tests/: test_input.c  test_list.c  test_log.c  test_str.c
